src/components/Note/Note.module.css
.note {
  background-color: white;
  padding-top: 24px;
  padding: 16px;
  border-radius: 6px;
  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.243);
  font-size: 0.9rem;
  letter-spacing: 0.8px;
}

.content {
  line-height: 1.5;
}

.date {
  margin-top: 32px;
  display: flex;
  align-items: center;
  justify-content: end;
  gap: 6px;
}

.dot {
  font-size: 1.7rem;
}

